fixed user choice overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   height: 600px;
   width: 1000px;
   margin: 0 auto;
-  background-color: grey;
+  background-color: orange;
 }
 
 .top {
@@ -21,14 +21,14 @@
   width: 200px;
   display: inline-block;
   margin-right: -4px;
-  background-color: purple;
+  background-color: #A9A9A9;
 }
 
 .cat-space {
   height: 400px;
   width: 600px;
   display: inline-block;
-  background-color: orange;
+  background-color: #D3D3D3;
   margin-right: -4px;
 }
 
@@ -37,7 +37,7 @@
   height:200px;
   display:inline-block;
   margin-right: -4px;
-  background-color: coral;
+  background-color: black;
 }
 
 .user-choices{
@@ -45,13 +45,14 @@
   height: 200px;
   display: inline-block;
   margin-right: -4px;
-  background-color: #1E90FF;
+  background-color: pink;
 }
 
 .user-choices div{
   width:600px;
   height:50px;
-  background-color:grey;
-  background: linear-gradient(grey, white, grey);
+  background-color:#C0C0C0;
+  background: linear-gradient(#C0C0C0	, #FFFFFF, #C0C0C0);
   font-size: 20px;
+  overflow: hidden;
 }
